--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~8.2.8",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "brace": "^0.11.1",
+    "classlist.js": "^1.1.20150312",
+    "file-saver": "^2.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
